Revision history for DBIx::Class::Sims (ordered by revision number).

0.401000 Jun 09 2019 12:30:00 PDT
   - Provide a nice way to print DateTime objects in SIMS_DEBUG mode.

0.400000 May 25 2019 12:30:00 PDT
   - THIS RELEASE CONTAINS A POTENTIALLY BREAKING BEHAVIOR CHANGE.
   - Only process children when a unique constraint is met.
       - This means no parent or value settings are processed. Only children.
   - Fix a nasty bug when the FK is also a UK and there is more than one
     relationship emanating from the child table.
   - Add support for relationships defined by subroutines
       - The assumption that all relationships are single-column is likely to
         have to be dealt with soon. but, not yet.
   - Add SIMS_DEBUG envvar to output useful debugging information.

0.320000 May 11 2019 12:30:00 PDT
   - Handle the case where a FK is also a UK
       - Note: This currently only works for a single-column UK containing the
         FK where there is 1-and-only-1 inverse relationship from the parent
         Anything more complex may be undecidable in all cases.
   - Add method traversal for backreferences
   - strict_mode renamed to ignore_unknown_tables (defaults to false)
   - Add a allow_relationship_column_names option (defaults to false)
   - strict_mode is now a compilation of other options
       - ignore_unknown_tables = false
       - allow_relationship_column_names = false

0.310001 Apr 14 2019 12:30:00 PDT
   - Documentation fixes.

0.310000 Dec 26 2018 14:30:00 PDT
   - THIS RELEASE CONTAINS A POTENTIALLY BREAKING BEHAVIOR CHANGE.
   - Add a strict_mode (defaults to true)
      - Throws an error when a tablename doesn't exist

0.303000 Nov 25 2018 14:30:00 PDT
   - Find the best match including all parentage. (Re-enabled feature)
   - Don't call update() in fix_deferred_fks if no columns are dirty.
   - Ignore inflated columns when looking for a sims spec.

0.302001 Nov 25 2018 13:30:00 PDT