@@ -1,0 +1,73 @@
+# vi:sw=2
+use strictures 2;
+
+use Test::More;
+use Test::Deep; # Needed for re() below
+
+use lib 't/lib';
+
+BEGIN {
+  use loader qw(build_schema);
+  build_schema([
+    Artist => {
+      table => 'artists',
+      columns => {
+        id => {
+          data_type => 'int',
+          is_nullable => 0,
+          is_auto_increment => 1,
+        },
+        name => {
+          data_type => 'varchar',
+          size => 128,
+          is_nullable => 0,
+        },
+      },
+      primary_keys => [ 'id' ],
+      has_many => {
+        albums => { Album => 'artist_id' },
+      },
+    },
+    Album => {
+      table => 'albums',
+      columns => {
+        id => {
+          data_type => 'int',
+          is_nullable => 0,
+          is_auto_increment => 1,
+        },
+        artist_id => {
+          data_type => 'int',
+          is_nullable => 0,
+        },
+        name => {
+          data_type => 'varchar',
+          size => 128,
+          is_nullable => 0,
+        },
+      },
+      primary_keys => [ 'id' ],
+      belongs_to => {
+        artist => { Artist => 'artist_id' },
+      },
+    },
+  ]);
+}
+
+use common qw(sims_test);
+
+sims_test "Add relationship that creates loop" => {
+  spec => [
+    { Artist => 1 },
+    {
+      toposort => {
+        add_dependencies => {
+          Artist => 'Album',
+        },
+      },
+    },
+  ],
+  dies => qr/expected directed acyclic graph/,
+};
+
+done_testing;
